--- a/_includes/css/inter.css
+++ b/_includes/css/inter.css
@@ -12,20 +12,23 @@ Usage example:
     :root { font-family: InterVariable, sans-serif; }
   }
 
+Implementation note from Ricky:
+  Paths changed from font-files/ to fonts/
+  Accomodates existing Lume Simple Blog plugins.ts site.copy()
 */
 @font-face {
   font-family: InterVariable;
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
-  src: url("font-files/InterVariable.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterVariable.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterVariable;
   font-style: italic;
   font-weight: 100 900;
   font-display: swap;
-  src: url("font-files/InterVariable-Italic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterVariable-Italic.woff2?v=4.1") format("woff2");
 }
 /* legacy name "Inter var" (Oct 2023) */
 @font-face {
@@ -33,14 +36,14 @@ Usage example:
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
-  src: url("font-files/InterVariable.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterVariable.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: "Inter var";
   font-style: italic;
   font-weight: 100 900;
   font-display: swap;
-  src: url("font-files/InterVariable-Italic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterVariable-Italic.woff2?v=4.1") format("woff2");
 }
 /* static fonts */
 @font-face {
@@ -48,255 +51,252 @@ Usage example:
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("font-files/Inter-Thin.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-Thin.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url("font-files/Inter-ThinItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-ThinItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url("font-files/Inter-ExtraLight.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-ExtraLight.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url("font-files/Inter-ExtraLightItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-ExtraLightItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("font-files/Inter-Light.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-Light.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url("font-files/Inter-LightItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-LightItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("font-files/Inter-Regular.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-Regular.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("font-files/Inter-Italic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-Italic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("font-files/Inter-Medium.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-Medium.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("font-files/Inter-MediumItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-MediumItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("font-files/Inter-SemiBold.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-SemiBold.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("font-files/Inter-SemiBoldItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-SemiBoldItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("font-files/Inter-Bold.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-Bold.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url("font-files/Inter-BoldItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-BoldItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url("font-files/Inter-ExtraBold.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-ExtraBold.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url("font-files/Inter-ExtraBoldItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-ExtraBoldItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("font-files/Inter-Black.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-Black.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: Inter;
   font-style: italic;
   font-weight: 900;
   font-display: swap;
-  src: url("font-files/Inter-BlackItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/Inter-BlackItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("font-files/InterDisplay-Thin.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-Thin.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url("font-files/InterDisplay-ThinItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-ThinItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url("font-files/InterDisplay-ExtraLight.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-ExtraLight.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url("font-files/InterDisplay-ExtraLightItalic.woff2?v=4.1")
-    format("woff2");
+  src: url("fonts/InterDisplay-ExtraLightItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("font-files/InterDisplay-Light.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-Light.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url("font-files/InterDisplay-LightItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-LightItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("font-files/InterDisplay-Regular.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-Regular.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("font-files/InterDisplay-Italic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-Italic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("font-files/InterDisplay-Medium.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-Medium.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("font-files/InterDisplay-MediumItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-MediumItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("font-files/InterDisplay-SemiBold.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-SemiBold.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("font-files/InterDisplay-SemiBoldItalic.woff2?v=4.1")
-    format("woff2");
+  src: url("fonts/InterDisplay-SemiBoldItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("font-files/InterDisplay-Bold.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-Bold.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url("font-files/InterDisplay-BoldItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-BoldItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url("font-files/InterDisplay-ExtraBold.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-ExtraBold.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url("font-files/InterDisplay-ExtraBoldItalic.woff2?v=4.1")
-    format("woff2");
+  src: url("fonts/InterDisplay-ExtraBoldItalic.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("font-files/InterDisplay-Black.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-Black.woff2?v=4.1") format("woff2");
 }
 @font-face {
   font-family: InterDisplay;
   font-style: italic;
   font-weight: 900;
   font-display: swap;
-  src: url("font-files/InterDisplay-BlackItalic.woff2?v=4.1") format("woff2");
+  src: url("fonts/InterDisplay-BlackItalic.woff2?v=4.1") format("woff2");
 }
 
 @font-feature-values InterVariable {
