--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,14 @@
   color-scheme: dark;
 }
 
+p {
+  margin-block: var(--row-gap-xsmall);
+}
+
+.nav-back {
+  margin-block-end: calc(var(--row-gap-xsmall) / 8);
+}
+
 /* Page layout */
 main {
   padding: var(--row-gap-small) 0 var(--row-gap-medium);
@@ -112,6 +120,10 @@ main {
   & > :first-child {
     margin-top: 0;
   }
+}
+
+.body-home {
+  padding-block-start: calc(var(--row-gap-xsmall) * 1.125);
 }
 
 /* Search tweak */
@@ -128,6 +140,10 @@ footer {
 }
 
 .center {
+  /*
+  match .navbar inline padding
+  https://github.com/lumeland/theme-simple-blog/blob/v0.15.10/src/_includes/css/navbar.css#L7
+  */
   padding-inline: min(5vw, 5rem);
   text-align: center;
 }
