--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@
 @import "css/post-list.css";
 @import "css/post.css";
 
+/* google-fonts */
+
 :root {
   /* HSL hues, 1-359 */
   --h: 172; /* hue */
@@ -66,11 +68,11 @@
   --font-family-ui: system-ui,sans-serif;
 }
 
-/* @supports (font-variation-settings: normal) {
+@supports (font-variation-settings: normal) {
   :root {
-    --font-family-ui: InterVariable,system-ui,sans-serif;
+    --font-family-ui: text,system-ui,sans-serif;
   }
-} */
+}
 
 [data-theme="dark"] {
   --color-base: hsl(var(--a), var(--l), var(--xl));
